# Figment

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md
backend/: pyproject.toml
backend/app/: config.py  deps.py  logging.py  main.py
backend/app/cli/: __init__.py  __main__.py  app.py  commands.py  render.py  runtime.py  testdata.py  verify.py
backend/app/comfy/: builder.py  client.py  progress.py  templates.py
backend/app/db/: database.py  repo.py  schema.sql
backend/app/engines/: __init__.py  base.py  cloud.py  cloud_image.py  figure.py  figure_pipeline.py  local_comfy.py
backend/app/llm/: handoff.py  ollama_client.py  openrouter_client.py  prompts.py  routing.py
backend/app/models_catalog/: registry.py
backend/app/orchestrator/: memory.py  pipeline.py  queue.py
backend/app/routers/: assets.py  chat.py  jobs.py  models.py  projects.py  prompt.py  uploads.py
backend/app/schemas/: common.py  genspec.py  jobs.py
backend/app/services/: export_ops.py  image_ops.py  rembg_service.py  storage.py
backend/tests/: conftest.py  test_builder.py  test_chat_routing.py  test_figure_engine.py  test_genspec.py  test_handoff_parse.py  test_memory_orch.py  test_ollama_client.py  test_prompt_enhance.py  test_registry.py
figure_engine/: README.md  pyproject.toml
figure_engine/scripts/: audit_artifacts.py  gen_template_thumbs.py  list_models.py  run_orchestrator_live.py  smoke_clients.py  smoke_edits.py  smoke_image.py  smoke_research.py  smoke_structured.py  smoke_vision.py
figure_engine/src/figgen/: __init__.py  __main__.py  _native.py  cli.py  config.py  units.py
figure_engine/src/figgen/assets/: __init__.py  cache.py  generator.py  postprocess.py  prompts.py  store.py
figure_engine/src/figgen/charts/: __init__.py  runner.py  sandbox.py  track.py
figure_engine/src/figgen/fullimage/: __init__.py  composer.py  vectorize.py
figure_engine/src/figgen/jobs/: __init__.py  manager.py  models.py  store.py
figure_engine/tests/: conftest.py  test_edits.py  test_layout.py  test_method_diagram.py  test_pipeline_advanced.py  test_plan.py  test_providers.py  test_render_parity.py  test_research.py  test_routing.py  test_sandbox.py  test_scene.py  test_schema.py  test_schema_transform.py  test_server.py  test_vectorize.py
(+151 files in other folders)
